--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <nav class="mt-2">
       <ul class="flex space-x-4">
         <li><a routerLink="/" class="hover:underline">Home</a></li>
+        <li><a routerLink="/table" class="hover:underline">Table</a></li>
         <li><a routerLink="/login" class="hover:underline">Login</a></li>
         <li><a routerLink="/register" class="hover:underline">Register</a></li>
         <li><a routerLink="/protected" class="hover:underline">Protected</a></li>
