--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
     <h1 class="text-3xl font-bold">{{ title }}</h1>
     <nav class="mt-2">
       <ul class="flex space-x-4">
-        <li><a routerLink="/" class="hover:underline">Home</a></li>
+        <li><a routerLink="/home" class="hover:underline">Home</a></li>
         <li><a routerLink="/table" class="hover:underline">Table</a></li>
-        <li><a routerLink="/login" class="hover:underline">Login</a></li>
+        <li><a routerLink="/" class="hover:underline">Login</a></li>
         <li><a routerLink="/register" class="hover:underline">Register</a></li>
         <li><a routerLink="/protected" class="hover:underline">Protected</a></li>
       </ul>
